--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 	<meta name="theme-color" content="#9266cc">
 
   <meta name="google-site-verification" content="jaJV1cPOJohgrBOSPGVm2JztSSDSV5SMVOrWQZ-8j9I">
+  <link rel="canonical" href="https://www.dansmabulle-reflexologue.fr/">
+
   <title>Dans ma bulle - Réflexologie</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
@@ -155,3 +157,4 @@
   <script src="asset/js/app.js"></script>
 </body>
 </html>
+
