--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="asset/css/style.css">
+  <link rel="canonical" href="https://www.dansmabulle-reflexologue.fr/faq.html">
 </head>
 <body>
 
@@ -83,4 +84,5 @@
 
 <script src="asset/js/app.js"></script>
 </body>
+
 </html>
