--- a/reflexologie.html
+++ b/reflexologie.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="asset/css/style.css">
+  <link rel="canonical" href="https://www.dansmabulle-reflexologue.fr/reflexologie.html">
+
 </head>
 <body>
 
@@ -93,3 +95,4 @@
   <script src="asset/js/app.js"></script>
 </body>
 </html>
+
