--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+	<!-- REDIRECTION DEFINITIVE VERS LE NOUVEAU DOMAINE -->
+<meta http-equiv="refresh" content="0;url=https://www.dansmabulle-reflexologue.fr/">
+
+<link rel="canonical" href="https://www.dansmabulle-reflexologue.fr/">
+
+<meta name="robots" content="noindex, follow">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <!-- SEO principal -->
@@ -157,4 +164,5 @@
   <script src="asset/js/app.js"></script>
 </body>
 </html>
+
 
