--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <a class="btn btn-link" href="reflexologie.html">Découvrir →</a>
           </div>
 		  <div class="media order-mobile-last">
-            <img src="asset/img/bulle.jpg" alt="Réflexologie" class="img-rounded shadow" style="width:85%;max-width:420px;margin:auto;display:block" />
+            <img src="asset/img/reflexologie.jpeg" alt="Réflexologie" class="img-rounded shadow" style="width:85%;max-width:420px;margin:auto;display:block" />
           </div>
         </div>
       </div>
@@ -161,6 +161,7 @@
   <script src="asset/js/app.js"></script>
 </body>
 </html>
+
 
 
 
