--- a/galerie.html
+++ b/galerie.html
@@ -87,7 +87,7 @@
           <div class="gallery-step step-2">
             <div class="gallery-content">
               <div class="gallery-media">
-                <img src="asset/img/galerie2.jpg" alt="Couloir et salle d’attente du cabinet">
+                <img src="asset/img/accueil.jpg" alt="Couloir et salle d’attente du cabinet">
               </div>
               <div class="gallery-text">
                 <h3>2. L’accueil</h3>
@@ -151,7 +151,7 @@
           <div class="gallery-step reverse step-6">
             <div class="gallery-content">
               <div class="gallery-media">
-                <img src="asset/img/pied2.jpeg" alt="Séance de réflexologie plantaire">
+                <img src="asset/img/galeriepied.jpg" alt="Séance de réflexologie plantaire">
               </div>
               <div class="gallery-text">
                 <h3>6. Réflexologie plantaire</h3>
@@ -184,4 +184,5 @@
   <script src="asset/js/app.js"></script>
 </body>
 </html>
+
 
