--- a/presentation.html
+++ b/presentation.html
@@ -49,7 +49,7 @@
 
           <div class="polaroid-card">
             <div class="polaroid-photo-wrapper">
-              <img src="asset/img/maman.jpeg" alt="Stéphanie Rabut" class="polaroid-photo">
+              <img src="asset/img/presentation.jpg" alt="Stéphanie Rabut" class="polaroid-photo">
             </div>
             <p class="polaroid-caption">
               Stéphanie Rabut<br>
@@ -115,4 +115,5 @@
   <script src="asset/js/app.js"></script>
 </body>
 </html>
+
 
