--- a/reflexologie.html
+++ b/reflexologie.html
@@ -55,7 +55,7 @@
             <p>Cela peut aussi permettre de soigner des maux physiques ou psychologique à plus ou moins long terme. Mais cette technique ne remplace à aucun moment un suivi médical..</p>
           </div>
           <div class="center">
-            <img src="asset/img/reflexologie.jpeg" alt="Réflexologie" class="img-fluid" style="width:65%;max-width:600px">
+            <img src="asset/img/massage.jpg" alt="Réflexologie" class="img-fluid" style="width:65%;max-width:600px">
           </div>
         </div>
       </div>
@@ -95,4 +95,5 @@
   <script src="asset/js/app.js"></script>
 </body>
 </html>
+
 
