--- a/tarifs.html
+++ b/tarifs.html
@@ -45,19 +45,19 @@
         <div class="block-header"><span class="dot"></span><h2>Forfaits</h2></div>
         <div class="tarif-grid">
           <div class="tarif-item">
-            <img src="asset/img/tarif_pied.jpeg" alt="Plantaire 1h30">
+            <img src="asset/img/seances1.jpeg" alt="Plantaire 1h30">
             <strong>1ʳᵉ séance 1h30</strong>
             <div class="tarif-price">55 €</div>
             <div class="tarif-desc">Après un temps d'échange, profitez d'un soin en profondeur pour apaiser durablement votre corps et votre esprit.</div>
           </div>
           <div class="tarif-item">
-            <img src="asset/img/tarif_pied2.jpeg" alt="Plantaire 1h">
+            <img src="asset/img/seances2.jpeg" alt="Plantaire 1h">
             <strong>Plantaire/Palmaire 1h</strong>
             <div class="tarif-price">45 €</div>
             <div class="tarif-desc">Séance de suivi – Pour entretenir l’équilibre énergétique et émotionnel.</div>
           </div>
           <div class="tarif-item">
-            <img src="asset/img/tarif_main.jpeg" alt="Palmaire 1h">
+            <img src="asset/img/seances3.jpeg" alt="Palmaire 1h">
             <strong>Enfants 1h</strong>
             <div class="tarif-price">45 €</div>
             <div class="tarif-desc">Séance de suivi – Un moment de suivi tout doux, agréable et facile pour tout le monde, même pour les plus sensibles.</div>
@@ -132,4 +132,5 @@
 <script src="asset/js/app.js"></script>
 </body>
 </html>
+
 
