--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,9 @@
 			<p style="margin: 0.4rem 0; font-size: 1.15rem;">
 			  <strong>Email :</strong> dansmabulle.reflexologue@gmail.com
 			</p>
+			  <p style="margin: 0.4rem 0; font-size: 1.15rem;">
+			  <strong> Crédits photos :</strong> Un soir en Septembre
+			</p>
 		  </div>
 		</div>
 
@@ -82,4 +85,5 @@
   <script src="asset/js/app.js"></script>
 </body>
 </html>
+
 
